--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
+# ACTUATOR INFO
+info.library.name = AwesomeLibrary
+info.library.email = AwesomeLibrary@crud.com
+info.library.phone = 744489230
