--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile ('com.google.code.gson:gson:2.8.2')
     compile('org.springframework.boot:spring-boot-starter-mail')
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+
 
 }
 
